DB 기반 사용자 세션 인증 assets 경로 허용 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,45 @@
 spring.application.name=demo-web-db-sec
+
+#H2 DB ??? ????? ??? ?????.
+#???: false
 spring.h2.console.enabled=true
 
+#H2 DB ?? ??? ?????.
+#???: /h2-console
+#spring.h2.console.path: /h2-console
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=;;;;
+
+#always: ??? ??? ?? ??????.
+#embedded: ??? ??? ???? ??????? ???? ??????.
+#never: ??? ??? ?? ????? ????.
+#???: embedded
+spring.datasource.initialization-mode=always
+
+#JPA?? ??? ?????? ???? ?????.
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#??????? ??? ? ?????? ???? ???? ?? ?????. ?? ???? ?? ?????.
+#?? ?: none, validate, update, create, create-drop
+spring.jpa.hibernate.ddl-auto=update
+
+#??: JPA ??? ?? ???? ???? JPA ???? ??? ? SQL ????? ?????.
+#src/main/resources/data.sql ? ?? ?? ?? ??? ??? ??? ? ?? true ? ???? ??? ????.
+#???: false
+spring.jpa.defer-datasource-initialization=true
+
+#Hibernate? ???? ?? SQL ??? ??? ?????.
+#???: false
+spring.jpa.hibernate.show-sql=true
+
+#??: ???? SQL ??? ?? ?? ??????.
+#???: false
+spring.jpa.hibernate.format-sql=true
+
+
+# ???? ???
 logging.level.org.springframework=DEBUG
 logging.level.org.springframework.security=TRACE
