패키지명, 앱명 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=demo-web-db-sec
+spring.application.name=demo-jwt
 spring.h2.console.enabled=true
 
 logging.level.org.springframework=DEBUG
