불필요 의존성 정리, 포트 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=demo-web
-spring.h2.console.enabled=true
+
+server.port=${PORT:8080}
 
 logging.level.org.springframework=DEBUG
 logging.level.org.springframework.security=TRACE
