시큐리티 설정 보완

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,11 @@ server:
 
 logging:
   level:
+    root: INFO
     org:
       springframework: DEBUG
       springframework.security: TRACE
+    com:
+      nrzm:
+        demo:
+          security: DEBUG
