--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        PROFILE: ${PROFILE}
     image: demo-db:latest
     container_name: dev-boot
     ports:
