--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,13 @@ spring:
   application:
     name: demo-db
 
-  h2:
-    console:
-      enabled: true
+  #h2:
+    #console:
+      #enabled: true
       # path: /h2-console # h2 db console 경로 변경
 
   datasource:
-    url: jdbc:mysql://localhost:3306/mydatabase
+    url: jdbc:mysql://dev-mysql:3306/mydatabase
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: devuser
     password: 1234
