- compose에 PROFILE ENV가 없을때 기본 dev 적용하도록 보완 - Dockerfile에 gradlew 실행 보장을 위해 코드 정리

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        PROFILE: ${PROFILE}
+        PROFILE: ${PROFILE:-dev}
     image: demo-db:latest
     container_name: dev-boot
     ports:
