--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,9 @@ spring.application.name=demo-web
 
 server.port=${PORT:8080}
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
 logging.level.org.springframework=DEBUG
 logging.level.org.springframework.security=TRACE
